--- a/responsive.html
+++ b/responsive.html
@@ -18,10 +18,12 @@ Description : Responsive Layouts.
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
 	<!-- First, link the menu.css file here -->
-
+	<link rel="stylesheet" type="text/css" href="menu.css">
+<!-- 
 	<style>	
 		/* Remove borders at the end, they have been add just for detecting positions of items*/	
 		div {
+		
 			border: 1px dashed gray;	
 		}
 		.row{ 
@@ -36,7 +38,8 @@ Description : Responsive Layouts.
 		.small {
 			border: 1px solid yellow;	
 		}		
-	</style>
+		
+	</style> -->
 
     <style>
 		body { margin: 0; padding: 0;}
@@ -48,35 +51,82 @@ Description : Responsive Layouts.
         .news-item { padding: 10px; }
 		
 		.row { 
-			/*I need some CSS codes.*/		
+			/*I need some CSS codes.*/
+			width: 100%;
 		}
-
 		.large, .medium, .small {
 			/*I need some CSS codes.*/
+			width: 100%;
+			box-sizing: border-box;
 		}
 		
 		.gap {
 			/*I need some CSS codes.*/
+			width:100%;
+			height:100%;
+			padding:30px;
+			clear: both;
 		}
 
 		@media screen and (min-width: 769px) {			
 			.large { 
 				/*I need some CSS codes.*/
+				width: 100%;
 			}
 			.medium { 
 				/*I need some CSS codes.*/
+				width: 70%;
+				float: right;
 			}
 			.small { 
 				/*I need some CSS codes.*/
+				width: 30%;
+				float: left;
 			 }
 		}
 
         @media screen and (max-width: 768px) {
             /*I need some CSS codes.*/
+			.large {
+				width: 100%;
+			}
+			.medium {
+				width: 60%;
+				float: right;
+			}
+			.small {
+				width: 40%;
+				float: left;
+			}
+
+			.menu {
+				width: 100%;
+				float: none;
+			}
+
+			.main {
+				margin: 0;
+			}
         }
 
         @media screen and (max-width: 480px) {
 			/*I need some CSS codes.*/
+			.large, .medium, .small {
+				width: 100%;
+			}
+
+			.medium {
+				clear: left;
+			}
+
+			.menu {
+				width: 100%;
+				float: none;
+			}
+
+			h1 {
+				font-size: 18px;
+			}
         }
 
         
@@ -135,7 +185,7 @@ Description : Responsive Layouts.
 				<!-- Medium news item -->
 				<div class="medium news-item">
 					<header>
-						<h1>Mahdi Ansari Takes a Historic Spacewalk Near the ISS</h1>
+						<h1>Sebastian Nieto Takes a Historic Spacewalk Near the ISS</h1>
 					</header>
 					<img src="images/medium.jpg" alt="Medium Image">
 					<article>
