--- a/flex.html
+++ b/flex.html
@@ -1,9 +1,9 @@
 <!--
 =========================================================
-Name        : index.html
+Name        : flex.html
 Assignment  : Lab 4 Exercise C
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Jin Kim, Sebastian Nieto, Mahdi Ansari, William Arthur Philip Louis
+Submission  : Feb 7, 2024
 Description : Flex Layouts.
 =========================================================
 -->
@@ -17,7 +17,7 @@ Description : Flex Layouts.
 	-->
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-	<style>	
+	<!-- <style>	
 		/* Remove borders at the end, they have been add just for detecting positions of items*/	
 		div {
 			border: 1px dashed gray;	
@@ -34,7 +34,7 @@ Description : Flex Layouts.
 		.small {
 			border: 1px solid yellow;	
 		}		
-	</style>
+	</style> -->
 
 	<style>
 		/* CSS for menu. You don't need to touch this part */
@@ -69,10 +69,12 @@ Description : Flex Layouts.
         img { max-width: 100%; height: auto; }
         .container { 
 			/*I need some CSS codes.*/
+			width: 100%;
 		 }
         .header, .footer { background-color: #f2f2f2; text-align: center; padding: 10px; width: 100%;}
 		.body { 
 			/*I need some CSS codes.*/
+			display: flex;
 		}
         .main { 
 			padding: 15px; 
@@ -82,29 +84,38 @@ Description : Flex Layouts.
         .news-item { padding: 10px; }
         .row { 
 			/*I need some CSS codes.*/
+			display: flex;
+			flex-direction: row;
 		}
-        
 
         @media screen and (min-width: 769px) {
-            .menu { width: 150px; }     
+            .menu { width: 150px; 
+			padding-right: 50px;}     
 			.large { 
 				/*I need some CSS codes.*/
+				width: 100%;
 			}
 			.medium { 
 				/*I need some CSS codes.*/
+				width: 70%;
 			}
 			.small { 
 				/*I need some CSS codes.*/
-			 }       
+				width: 30%;
+			}
+
         }
 
         @media screen and (max-width: 768px) {
 			.body { 
 				/*I need some CSS codes.*/
+				flex-direction: column;
 			}
             .menu ul { 
 				/*I need some CSS codes.*/
-			 }            
+				flex-direction: row;
+			 }
+			
             /*I need some CSS codes.*/
         }
 
@@ -112,7 +123,11 @@ Description : Flex Layouts.
             .news-item header h1 { font-size: 18px; }
             .medium, .small { 
 				/*I need some CSS codes.*/
+				width: 100%;
 			 }
+			.row {
+				flex-direction: column;
+			}
         }
     </style>
 </head>
@@ -170,7 +185,7 @@ Description : Flex Layouts.
 					<!-- Medium news item -->
 					<div class="medium news-item">
 						<header>
-							<h1>Your Name Takes a Historic Spacewalk Near the ISS</h1>
+							<h1>Jin Kim Takes a Historic Spacewalk Near the ISS</h1>
 						</header>
 						<img src="images/medium.jpg" alt="Medium Image">
 						<article>
