--- a/responsive.html
+++ b/responsive.html
@@ -1,9 +1,9 @@
 <!--
 =========================================================
-Name        : index.html
+Name        : responsive.html
 Assignment  : Lab 4 Exercise B
-Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Author(s)   : Jin Kim, Sebastian Nieto, Mahdi Ansari, William Arthur Philip Louis
+Submission  : Feb 7, 2024
 Description : Responsive Layouts.
 =========================================================
 -->
